# swagger/swagger.json
@@ -373,6 +373,33 @@
                 }
             }
         },
+        "/home/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "home"
+                ],
+                "operationId": "HomeSettingController.Delete home setting",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "Enter id for delete home settings",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/in"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{string} string"
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/home/update": {
             "put": {
                 "tags": [
@@ -468,6 +495,85 @@
                 }
             }
         },
+        "/user/export/pdf/": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "operationId": "UserController.export Data",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{string} string"
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/export/xlxs": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "operationId": "UserController.export Data",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{string} string"
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/import/xlsx": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "operationId": "UserController.export Data",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "file",
+                        "description": "File to be uploaded",
+                        "required": true,
+                        "type": "file"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{string} string"
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "tags": [
@@ -483,6 +589,18 @@
                         "schema": {
                             "$ref": "#/definitions/models.UserLoginRequest"
                         }
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
+                        "in": "header",
+                        "name": "Accept-Languages",
+                        "description": "Bearer YourAccessToken",
+                        "type": "string"
                     }
                 ],
                 "responses": {
@@ -505,6 +623,14 @@
                 ],
                 "description": "logout\n\u003cbr\u003e",
                 "operationId": "UserController.logout user",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    }
+                ],
                 "responses": {
                     "403": {
                         "description": ""
@@ -532,6 +658,52 @@
                 }
             }
         },
+        "/user/newMessage": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "description": "generate new message\n\u003cbr\u003e",
+                "operationId": "UserController.Create message code",
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "Code",
+                        "description": "Write Message Key without space you can you ( _ ) place of space",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "English",
+                        "description": "Write Message in English",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "Hindi",
+                        "description": "Write Message in Hindi",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} string"
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "tags": [
@@ -539,6 +711,12 @@
                 ],
                 "operationId": "UserController.Insert New User",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
                     {
                         "in": "body",
                         "name": "body",
@@ -555,6 +733,46 @@
                         "schema": {
                             "$ref": "#/definitions/models.Users"
                         }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/secure/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "user"
+                ],
+                "description": "delete user\n\u003cbr\u003e",
+                "operationId": "UserController.delete user",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "user id to delete recode",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Bearer YourAccessToken",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} string"
                     },
                     "403": {
                         "description": ""
@@ -579,6 +797,12 @@
                         }
                     },
                     {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
                         "in": "header",
                         "name": "Authorization",
                         "description": "Bearer YourAccessToken",
@@ -591,6 +815,50 @@
                         "description": "",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/secure/inup": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "description": "Insert update both\n\u003cbr\u003e",
+                "operationId": "UserController.Insert Update",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "update New User",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.NewUserRequest"
+                        }
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Bearer YourAccessToken",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Users"
                         }
                     },
                     "403": {
@@ -614,6 +882,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.ResetUserPassword"
                         }
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
                     },
                     {
                         "in": "header",
@@ -653,6 +927,12 @@
                         }
                     },
                     {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
                         "in": "header",
                         "name": "Authorization",
                         "description": "Bearer YourAccessToken",
@@ -688,6 +968,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.SearchRequest"
                         }
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
                     },
                     {
                         "in": "header",
@@ -727,6 +1013,12 @@
                         }
                     },
                     {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
                         "in": "header",
                         "name": "Authorization",
                         "description": "Bearer YourAccessToken",
@@ -756,6 +1048,12 @@
                 "operationId": "UserController.Get All",
                 "parameters": [
                     {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
                         "in": "header",
                         "name": "Authorization",
                         "description": "Bearer YourAccessToken",
@@ -783,6 +1081,12 @@
                 ],
                 "operationId": "UserController.verifid users",
                 "parameters": [
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
                     {
                         "in": "header",
                         "name": "Authorization",
@@ -819,6 +1123,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.SendOtpData"
                         }
+                    },
+                    {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
                     },
                     {
                         "in": "header",
@@ -858,6 +1168,12 @@
                         }
                     },
                     {
+                        "in": "query",
+                        "name": "lang",
+                        "description": "use en-US or hi-IN",
+                        "type": "string"
+                    },
+                    {
                         "in": "header",
                         "name": "Authorization",
                         "description": "Bearer YourAccessToken",
@@ -880,6 +1196,10 @@
         }
     },
     "definitions": {
+        "in": {
+            "title": "in",
+            "type": "object"
+        },
         "models.GetHomeSettingRequest": {
             "title": "GetHomeSettingRequest",
             "type": "object",
